--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "@vtrbo/ni",
-  "version": "0.0.3",
-  "packageManager": "pnpm@7.5.2",
-  "description": "Use the right package manager",
-  "author": "Victor Bo<vtrbo.qq.com>",
+  "version": "0.0.4",
+  "description": "Victor Bo's Package Manager",
+  "author": {
+    "name": "Victor Bo",
+    "email": "hi@vtrbo.cn"
+  },
   "license": "MIT",
   "homepage": "https://github.com/vtrbo/ni#readme",
   "repository": {
@@ -15,6 +17,7 @@
   },
   "exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "require": "./dist/index.cjs",
       "import": "./dist/index.mjs"
     }
@@ -38,31 +41,34 @@
   "scripts": {
     "prepublishOnly": "npm run build",
     "dev": "esno src/commands/ni.ts",
+    "nr": "esno src/commands/nr.ts",
     "build": "unbuild",
     "stub": "unbuild --stub",
-    "release": "bumpp && npm publish --access=public",
+    "release": "bumpp && npm publish",
     "lint": "eslint .",
     "test": "vitest"
   },
   "devDependencies": {
     "@types/ini": "^1.3.31",
-    "@types/node": "^18.6.4",
-    "@types/prompts": "^2.0.14",
+    "@types/node": "^18.11.9",
+    "@types/prompts": "^2.4.1",
     "@types/which": "^2.0.1",
-    "@vtrbo/eslint-config": "^0.0.6",
+    "@vtrbo/eslint-config": "^0.0.7",
     "bumpp": "^8.2.1",
-    "eslint": "^8.21.0",
+    "eslint": "^8.27.0",
     "esno": "^0.16.3",
     "execa": "^6.1.0",
-    "fast-glob": "^3.2.11",
+    "fast-glob": "^3.2.12",
     "find-up": "^6.3.0",
-    "ini": "^3.0.0",
+    "fzf": "^0.5.1",
+    "ini": "^3.0.1",
+    "kleur": "^4.1.5",
     "prompts": "^2.4.2",
     "rimraf": "^3.0.2",
     "terminal-link": "^3.0.0",
-    "typescript": "^4.7.4",
-    "unbuild": "^0.7.6",
-    "vitest": "^0.20.3",
-    "which": "^2.0.2"
+    "typescript": "^4.9.3",
+    "unbuild": "^1.0.1",
+    "vitest": "^0.25.2",
+    "which": "^3.0.0"
   }
 }
